Add /* tslint:disable */ to the header of the generated code.

--- a/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
+++ b/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
@@ -5,6 +5,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 /* eslint-disable */
+/* tslint:disable */
 <#= Header #>
 
 // components
