--- a/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
+++ b/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
@@ -113,12 +113,17 @@ class <#= receiverType.Name #>_Binder implements ReceiverRegister<<#= receiverTy
     public readonly register = (connection: HubConnection, receiver: <#= receiverType.Name #>): Disposable => {
 
 <# foreach(var method in receiverType.Methods) { #>
-        connection.on("<#= method.Name #>", <#= method.ToLambdaEvent(TranspilationOptions) #>);
+    const __<#= method.Name.Format(TranspilationOptions.NamingStyle) #> = <#= method.ToSpreadSyntax(TranspilationOptions) #>;
+<# } #>
+
+
+<# foreach(var method in receiverType.Methods) { #>
+        connection.on("<#= method.Name #>", __<#= method.Name.Format(TranspilationOptions.NamingStyle) #>);
 <# } #>
 
         const methodList: ReceiverMethod[] = [
 <# for(int i = 0; i < receiverType.Methods.Count; i++) { #>
-            { methodName: "<#= receiverType.Methods[i].Name #>", method: receiver.<#= receiverType.Methods[i].Name.Format(TranspilationOptions.NamingStyle) #> }<#= i != receiverType.Methods.Count - 1 ? "," : "" #>
+            { methodName: "<#= receiverType.Methods[i].Name #>", method: __<#= receiverType.Methods[i].Name.Format(TranspilationOptions.NamingStyle) #> }<#= i != receiverType.Methods.Count - 1 ? "," : "" #>
 <# } #>
         ]
 
