add ts-ignore for getHubProxyFactory() and getReceiverRegister() to avoid "TS7030: Not all code paths return a value."

--- a/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
+++ b/src/TypedSignalR.Client.TypeScript/Templates/ApiTemplate.tt
@@ -50,6 +50,7 @@ export type HubProxyFactoryProvider = {
 <# } #>
 }
 
+// @ts-ignore
 export const getHubProxyFactory = ((hubType: string) => {
 <# foreach(var hubType in HubTypes) { #>
     if(hubType === "<#= hubType.Name #>") {
@@ -64,6 +65,7 @@ export type ReceiverRegisterProvider = {
 <# } #>
 }
 
+// @ts-ignore
 export const getReceiverRegister = ((receiverType: string) => {
 <# foreach(var receiverType in ReceiverTypes) { #>
     if(receiverType === "<#= receiverType.Name #>") {
